compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/incompleteValWithAccessor.kt
package c

val i : String get() =<!SYNTAX!><!>